sistemato lo yaml e la maggior parte degli errori nelle api
